--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.1",
+    "swiper": "^11.0.5",
     "three": "^0.158.0",
     "tsparticles": "^2.12.0",
     "typewriter-effect": "^2.21.0"
