--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@studio-freight/lenis": "^1.0.29",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^10.16.5",
+    "framer-motion-3d": "^10.16.15",
     "gsap": "^3.12.3",
     "locomotive-scroll": "^4.1.4",
     "next": "14.0.3",
